--- a/.eslintrc
+++ b/.eslintrc
@@ -3,24 +3,19 @@
     "node": true,
     "es6": true
   },
-    "plugins": [
-      "prettier"
-    ],
+  "plugins": ["prettier"],
   "rules": {
     "no-undef": "off",
     "no-console": "error",
     "react/display-name": "off",
-    "indent": [
-      "error",
-      2
-    ],
+    "indent": ["error", 2],
     "quotes": ["error", "single"],
     "semi": "off",
     "react/prop-types": "off"
   },
-  "extends": [
-    "plugin:react/recommended"
-  ],
+  // "extends": [
+  //   "plugin:react/recommended"
+  // ],
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module",
