--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.3.2",
     "classnames": "^2.3.1",
     "eslint-plugin-prettier": "^5.0.0",
     "react": "^18.2.0",
@@ -15,6 +16,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.0",
     "sass": "^1.54.4",
     "web-vitals": "^2.1.0"
   },
