--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "trato-tech",
+  "name": "geek-journey",
+  "homepage": "https://vhdmdls4.github.io/geek-journey",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,6 +26,8 @@
   },
   "scripts": {
     "dev": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
